<resources>
    <string name="app_name">Data Center Toolkit</string>
    <string name="calc">Calculate</string>
    <string name="power_yr">Annual Power Usage:</string>
    <string name="cost_yr">Annual Power Cost:</string>
    <string name="carbon_yr">Annual Carbon Footprint:</string>
    <string name="one_year">1 Year: </string>
    <string name="five_year">5 Years: </string>
    <string name="ten_year">10 Years: </string>
    <string name="dollarSn">$</string>
    <string name="kW">" kW"</string>
    <string name="dollarSign">$</string>
    <string name="txtTons">" Tons"</string>
    <string name="mm">mm</string>
    <string name="total_it_load">Total IT Load</string>
    <string name="calculate">Calculate</string>
    <string name="thermal_explainer">Thermal Calculator allows you to enter your total equipment kW or W, returning an estimated BTU/h output of heat. This figure may help when determining the proper amount of cooling needed to maintain the target temperature for your IT equipment.</string>
    <string name="kwOutput">%s kW</string>
    <string name="dollarOutput">$%s</string>
    <string name="tonOutput">%s Tons</string>
</resources>
