<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollPue">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtTotalIt"
                android:hint="Total IT Load"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="kW"
                android:id="@+id/textView1"
                android:layout_marginTop="20dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtTotalFac"
                android:hint="Total Facility Load"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="kW"
                android:id="@+id/textView2" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Cost/kW by State: "
                android:id="@+id/costKW"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp" />

            <Spinner
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:id="@+id/spinnerState"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Override State Cost"
                android:id="@+id/chkOverrideState"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:checked="false" />

            <EditText
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtOverrideState"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc"
            android:id="@+id/btnCalc"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <View style="@style/Divider"
            android:background="#ff9933"
            android:elevation="4dp"
            android:shadowColor="#000000"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Your PUE and DCiE"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="PUE"
                android:layout_weight=".50"
                android:gravity="center" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:text="DCiE"
                android:layout_weight=".50"
                android:gravity="center" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txtPueTotal"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight=".50"
                android:gravity="center" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txtDCiE"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_weight=".50"
                android:gravity="center" />
        </LinearLayout>

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/imgYearlyUsage"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/electricityicon"
            android:layout_marginTop="35dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/power_yr"
            android:id="@+id/textViewYearlyPower"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtTotalPower"
            android:layout_marginTop="10dp"
            android:text=""
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/imgYearlyCost"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/moneyicon"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cost_yr"
            android:id="@+id/textViewYearlyCost"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtTotalCost"
            android:layout_marginTop="10dp"
            android:text=""
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/imgEmission"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/emissionicon"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/carbon_yr"
            android:id="@+id/textViewEmission"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtEmission"
            android:layout_marginTop="10dp"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="How Much Can I Save?"
            android:id="@+id/btnToEffAct"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp" />

    </LinearLayout>
</ScrollView>